# gym-app

./: .gitignore  Cargo.toml  MIGRATION.md  QUICKSTART.md  README.md  package-lock.json  package.json  pom.xml
lib/: mongodb.ts
models/: diet.model.ts  routines.model.ts  users.model.ts
public/: styles.css
src/: handlers.rs  main.rs  templates.rs
src/app/: layout.tsx  page.tsx
src/app/api/: excercises.ts  routines.ts
src/app/api/auth/: [...nextauth].ts
src/app/auth/signup/: page.tsx
src/app/dashboard/: layout.tsx  page.tsx
src/app/dashboard/ai-trainer/: page.tsx
src/app/dashboard/diet/: page.tsx
src/app/dashboard/routine/: page.tsx
src/app/login/: page.tsx
src/components/: AITrainerChat.tsx  Sidebar.tsx
src/main/java/com/gym/app/: GymApplication.java
src/main/java/com/gym/app/controller/: HomeController.java
src/main/resources/: application.properties
src/main/resources/static/css/: styles.css
src/main/resources/templates/: index.html
src/test/java/com/gym/app/: GymApplicationTests.java
src/test/java/com/gym/app/controller/: HomeControllerTest.java
templates/: base.html  home.html  learn.html
